--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
+<%- include('layouts/header',{title: "Pet Manager"}) %>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>INDEX</h1>
+    <a href="/manage">Manage Button</a>
   </body>
 </html>
