--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <%- include('layouts/header',{title: "Pet Manager"}) %>
   <body>
     <h1>INDEX</h1>
+    <a href="/create">Create Pet</a>
     <a href="/manage">Manage Button</a>
   </body>
 </html>
