--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -2,13 +2,22 @@
 <body>
   <table class="table table-striped table-dark">
     <tbody>
+      <thead>
+        <th>ID</th>
+        <th>Species</th>
+        <th>Name</th>
+        <th>Photo</th>
+        <th>Email</th>
+        <th>Creation Date</th>
+      </thead>
       <% for (let e of pets){ %>
         <tr>
           <td><%= e.id %></td>
+          <td><%= e.species %></td>
           <td><%= e.name %></td>
-          <td><%= e.foto %></td>
+          <td><img src="<%= e.foto %>" alt="pet pic" style="height: 80px"></td>
           <td><%= e.email %></td>
-          <td><%= e.created_at %></td>
+          <td><%= e.created_at.toString().slice(0,15) %></td>
         </tr>
       <% } %>
     </tbody>
