--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,8 +1,8 @@
 <%- include('layouts/header',{title: "Pet Manager"}) %>
   <body>
-    <h1>INDEX</h1>
-    <a href="/create">Create Pet</a>
-    <a href="/manage">Manage Button</a>
+    <h1 style="text-align: center;">VOTE THE CUTEST</h1>
+    <a href="/create" class="btn btn-primary">Add Pet</a>
+    <a href="/manage" class="btn btn-secondary">Manage Pets</a>
     <div class="container">
       <div class="row">
         <div class="col d-flex flex-column align-items-center">
