--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -1,5 +1,7 @@
 <%- include('layouts/header',{title: "Pet Manager"}) %>
 <body>
+  <div class="container">
+  <a href="/" class="btn btn-secondary my-2">Home</a>
   <table class="table table-striped table-dark">
     <tbody>
       <thead>
@@ -22,5 +24,6 @@
       <% } %>
     </tbody>
   </table>
+</div>
 </body>
 </html>
