--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,7 +21,7 @@
       </div>
     </div>
     <% } else {  %>
-      <h1 style="text-align: center;">You've voted for all available pet pairings, add more pets.</h1>
+      <h1 style="text-align: center;">You've seen all available pet pairings, add more pets.</h1>
     <% }%>
   </body>
 </html>
