--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     </div>
     <% if (typeof agreed !== 'undefined' && agreed) {%>
     <div class="container" style="text-align: center;">
-      <%= agreed %>% of voters agreed with you.
+      In that matchup: <%= agreed %>% of voters agreed with you.
     </div>
     <% }%>
     <% if (typeof pet1 !== 'undefined') {%>
