--- a/views/manage.ejs
+++ b/views/manage.ejs
@@ -1,25 +1,32 @@
 <%- include('layouts/header',{title: "Pet Manager"}) %>
+<head>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+</head>
 <body>
   <div class="container">
   <a href="/" class="btn btn-secondary my-2">Home</a>
   <table class="table table-striped table-dark">
     <tbody>
-      <thead>
+      <thead style="text-align: center;">
         <th>ID</th>
         <th>Species</th>
         <th>Name</th>
         <th>Photo</th>
         <th>Email</th>
         <th>Creation Date</th>
+        <th>UPDATE PET</th>
+        <th>DELETE PET</th>
       </thead>
       <% for (let e of pets){ %>
-        <tr>
+        <tr style="text-align: center;">
           <td><%= e.id %></td>
           <td><%= e.species %></td>
           <td><%= e.name %></td>
           <td><img src="<%= e.foto %>" alt="pet pic" style="height: 80px"></td>
           <td><%= e.email %></td>
           <td><%= e.created_at.toString().slice(0,15) %></td>
+          <td><a href="/update/:<%=e.id%>" class="btn btn-outline-warning">UPDATE</i></a></td>
+          <td><a href="/delete/:<%=e.id%>" class="btn btn-outline-danger"><i class="bi bi-trash3"></i></a></td>
         </tr>
       <% } %>
     </tbody>
