--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,4 +1,4 @@
-<%- include('layouts/header',{title: "Pet Manager"}) %>
+<%- include('layouts/header',{title: "Create Pet"}) %>
 <body>
   <div class="container">
     <a href="/" class="btn btn-secondary my-3 mx-3">Home</a>
