--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<%- include('layouts/header',{title: "Pet Manager"}) %>
+<%- include('layouts/header',{title: "Pet Battles"}) %>
   <body>
     <h1 style="text-align: center;">VOTE THE CUTEST</h1>
     <div class="container mb-3">
