--- a/views/stats.ejs
+++ b/views/stats.ejs
@@ -1,4 +1,4 @@
-<%- include('layouts/header',{title: "Pet Manager"}) %>
+<%- include('layouts/header',{title: "Statistics"}) %>
 <body>
   <div class="container">
     <a href="/" class="btn btn-secondary my-2">HOME</a>
